@@ -5,13 +5,15 @@ import {uuidv4} from '../../js/util';
 export let disabled = false;
 export let form;
 export let hidden = false;
+export let icon = 'square';
 export let name = '';
 export let id = name ? 'form_' + name : uuidv4();
 
 const checked = form.field(name);
 let hasFocus = false;
 
-$: icon = $checked ? 'check-square' : 'square';
+$: icons = icon == 'caret' ? ['caret-square-down', 'caret-square-up'] : ['square', 'check-square'];
+$: stateIcon = icons[$checked ? 1 : 0];
 </script>
 
 <div class="checkbox" class:has-focus="{hasFocus}" class:is-disabled="{disabled}" hidden="{hidden}">
@@ -22,6 +24,6 @@ $: icon = $checked ? 'check-square' : 'square';
     bind:checked="{$checked}"
     on:blur="{() => {hasFocus = false}}"
     on:focus="{() => {hasFocus = true}}"/>
-  <Icon family="regular" name="{icon}" on:click="{() => { disabled || ($checked = !$checked) }}"/>
+  <Icon family="regular" name="{stateIcon}" on:click="{() => { disabled || ($checked = !$checked) }}"/>
   <label for="{id}"><slot name="label">Label</slot></label>
 </div>
